[gd_scene load_steps=8 format=3 uid="uid://lrxvrd5c6j6q"]

[ext_resource type="Script" path="res://level_scenes/2level.gd" id="1_0ut54"]
[ext_resource type="Theme" uid="uid://fxrgpeh8cmpw" path="res://it_tastes_like_SPRITE_matrix/buttons.tres" id="2_sdq3l"]
[ext_resource type="FontFile" uid="uid://7nwygn2tc1wa" path="res://it_tastes_like_SPRITE_matrix/refinery-25-semi-bold-maisfontes.fbec/refinery-25-semi-bold.ttf" id="3_lxng4"]
[ext_resource type="Texture2D" uid="uid://dxlqaymo7br1u" path="res://it_tastes_like_SPRITE_matrix/Rectangle 2.png" id="4_bruj5"]
[ext_resource type="Texture2D" uid="uid://d2msq18r3olfy" path="res://it_tastes_like_SPRITE_matrix/Group 9.png" id="5_7dxy8"]
[ext_resource type="Theme" uid="uid://c8i5xk68yki12" path="res://it_tastes_like_SPRITE_matrix/check_box.tres" id="6_doe55"]

[sub_resource type="ButtonGroup" id="ButtonGroup_0nitt"]

[node name="2level" type="Control"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.256
anchor_right = 0.825
anchor_bottom = 0.728
offset_top = -0.320007
offset_bottom = -0.160034
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ut54")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 158.0
offset_right = 396.0
offset_bottom = 202.0
theme = ExtResource("2_sdq3l")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.603922, 0, 1)
theme_override_colors/font_focus_color = Color(0.745098, 0.0627451, 0.623529, 1)
theme_override_fonts/font = ExtResource("3_lxng4")
theme_override_font_sizes/font_size = 21
text = "Сброс"
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 158.0
offset_right = 634.0
offset_bottom = 202.0
theme = ExtResource("2_sdq3l")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.67451, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.690196, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.164706, 0.670588, 1)
theme_override_fonts/font = ExtResource("3_lxng4")
theme_override_font_sizes/font_size = 21
text = "Подтвердить"
icon_alignment = 1
expand_icon = true

[node name="Rectangle2" type="Sprite2D" parent="."]
position = Vector2(404, 270)
scale = Vector2(1.0386, 1.13636)
texture = ExtResource("4_bruj5")

[node name="output_1" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 234.0
offset_right = 681.0
offset_bottom = 299.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lxng4")
theme_override_font_sizes/normal_font_size = 40

[node name="Group9" type="Sprite2D" parent="."]
position = Vector2(192.29, 42.75)
scale = Vector2(0.572411, 0.42381)
texture = ExtResource("5_7dxy8")

[node name="RichTextLabel2" type="RichTextLabel" parent="Group9"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -531.086
offset_top = -80.2247
offset_right = -37.0865
offset_bottom = -12.2247
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lxng4")
theme_override_font_sizes/normal_font_size = 50
text = "Введите вектор функции"

[node name="Group10" type="Sprite2D" parent="."]
position = Vector2(490.209, 42.25)
scale = Vector2(0.423809, 0.42381)
texture = ExtResource("5_7dxy8")

[node name="RichTextLabel" type="RichTextLabel" parent="Group10"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.931
offset_top = -79.9438
offset_right = -49.9317
offset_bottom = 20.0562
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lxng4")
theme_override_font_sizes/normal_font_size = 56
text = "Номер остаточной"

[node name="Group11" type="Sprite2D" parent="."]
position = Vector2(708, 42.75)
scale = Vector2(0.290209, 0.42381)
texture = ExtResource("5_7dxy8")

[node name="RichTextLabel" type="RichTextLabel" parent="Group11"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.931
offset_top = -79.9438
offset_right = -49.9317
offset_bottom = 20.0562
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lxng4")
theme_override_font_sizes/normal_font_size = 56
text = "Номер переменной"

[node name="CheckBox2" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 550.419
offset_top = 84.5
offset_right = 590.419
offset_bottom = 124.5
theme = ExtResource("6_doe55")
button_group = SubResource("ButtonGroup_0nitt")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox2"]
layout_mode = 0
offset_left = -27.0
offset_top = 4.0
offset_right = 13.0
offset_bottom = 44.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lxng4")
theme_override_font_sizes/normal_font_size = 32
text = "1"

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 443.419
offset_top = 84.5
offset_right = 483.419
offset_bottom = 124.5
theme = ExtResource("6_doe55")
button_pressed = true
button_group = SubResource("ButtonGroup_0nitt")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox"]
layout_mode = 0
offset_left = -24.0
offset_top = 4.0
offset_right = 16.0
offset_bottom = 44.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lxng4")
theme_override_font_sizes/normal_font_size = 32
text = "0"

[node name="input_1" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 77.0
offset_right = 356.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0.670588, 0.952941, 0.988235, 1)
theme_override_fonts/font = ExtResource("3_lxng4")
theme_override_font_sizes/font_size = 30

[node name="Rectangle3" type="Sprite2D" parent="input_1"]
position = Vector2(165, 26)
scale = Vector2(0.575439, 0.590909)
texture = ExtResource("4_bruj5")

[node name="input_3" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 625.0
offset_top = 77.0
offset_right = 786.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0.670588, 0.952941, 0.988235, 1)
theme_override_fonts/font = ExtResource("3_lxng4")
theme_override_font_sizes/font_size = 30

[node name="Rectangle3" type="Sprite2D" parent="input_3"]
position = Vector2(80.9999, 26)
scale = Vector2(0.280702, 0.590909)
texture = ExtResource("4_bruj5")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -319.0
offset_right = 268.0
offset_bottom = -243.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lxng4")
theme_override_font_sizes/normal_font_size = 74
text = "Поиск остаточной"

[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CheckBox2" to="." method="_on_check_box_2_pressed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_check_box_pressed"]
